xserver-xorg-video-intel (2:2.17.0+git20120101-1) UNRELEASED; urgency=low

  * New upstream snapshot:
    - Merge from upstream master up to 770a953ff0.
  * Enable SNA support, as suggested by upstream. It should be usable now
    and regression reports are welcome.
  * Add patch to support passing a builder string:
    - 0001-Fix-build-failure-when-passing-with-builderstring.patch

 -- Cyril Brulebois <kibi@debian.org>  Sun, 01 Jan 2012 06:19:40 +0100

xserver-xorg-video-intel (2:2.17.0-1) unstable; urgency=low

  [ Timo Aaltonen ]
  * New upstream release. (Closes: #635953)

 -- Cyril Brulebois <kibi@debian.org>  Sat, 19 Nov 2011 12:46:57 +0100

xserver-xorg-video-intel (2:2.16.0-1) unstable; urgency=low

  * New upstream release.

 -- Cyril Brulebois <kibi@debian.org>  Sun, 28 Aug 2011 13:15:24 +0200

xserver-xorg-video-intel (2:2.15.901-1) experimental; urgency=low

  * Re-enable XvMC.
  * New upstream snapshot.
  * Build against xserver 1.10.99.x.

 -- Julien Cristau <jcristau@debian.org>  Mon, 01 Aug 2011 01:37:49 +0200

xserver-xorg-video-intel (2:2.15.0-3) unstable; urgency=high

  * Temporarily disable xvmc to sidestep the xcb-util mess and move to
    testing.

 -- Julien Cristau <jcristau@debian.org>  Sat, 14 May 2011 19:00:38 +0200

xserver-xorg-video-intel (2:2.15.0-2) unstable; urgency=low

  * xcb-util was split up in 0.3.8 and libxcb-aux has been merged
    into libxcb-util, thus update Build-Depends accordingly.
  * Add ${misc:Depends} to xserver-xorg-video-intel-dbg Depends.

 -- Arnaud Fontaine <arnau@debian.org>  Fri, 06 May 2011 23:53:39 +0900

xserver-xorg-video-intel (2:2.15.0-1) unstable; urgency=low

  * New upstream release.
  * Merge from upstream master up to c9fb69cb25 to fix crashes with i965
    and kwin in particular, thanks to Julian Andres Klode and Modestas
    Vainius for their reports in Debian and upstream (Closes: #622653):
    - NEWS: typo.
    - intel: Beware the unsigned promotion when checking for batch overflows