@@ -6,6 +6,7 @@ xserver-xorg-video-intel (2:2.17.0+git20120101-1) UNRELEASED; urgency=low
     and regression reports are welcome.
   * Add patch to support passing a builder string:
     - 0001-Fix-build-failure-when-passing-with-builderstring.patch
+  * Pass a builder string, as done in the server.
 
  -- Cyril Brulebois <kibi@debian.org>  Sun, 01 Jan 2012 06:19:40 +0100
 
